[package]
name = "one_billion_line"
version = "0.1.0"
edition = "2021"
default-run = "1brc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", optional = true }
rand = { version = "0.8.5", optional = true }
rand_distr = { version = "0.4.3", optional = true }
fast-float = "0.2"
rustc-hash = "1.0"

[features]
generator = ["anyhow", "rand", "rand_distr"]


[[bin]]
name = "generate"
required-features = ["generator"]

[[bin]]
name = "1brc"
path = "src/main.rs"

[profile.release]
debug = true